@@ -1,3 +1,8 @@
+2014-April-22 Struan Robertson
+
+	* MolecularComponents.cpp/.h: Update of GRIT algorithm to account for 
+	the relative rotation of fragments.
+
 2014-April-26 Chris Morley
 
 	* src/System.cpp, src/System.h: allow multiple <control> blocks. Use
